--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -1,6 +1,5 @@
 
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 <style>
 
 
@@ -39,7 +38,6 @@
 	}
 
 </style>
-</head>
 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#location-map-modal">Choose location</button>
 <!-- Modal -->
@@ -358,20 +356,17 @@
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"></script>
 <script src="http://maps.googleapis.com/maps/api/js"></script>
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script>
+
 
 	var map;
 	var marker;
 	var myCenter=new google.maps.LatLng(51.508742,-0.120850);
 	var geocoder;
 	var infowindow;
-	var x = document.getElementById("lat");
-	var y = document.getElementById("lng");
 
 	function initialize() {
     	geocoder = new google.maps.Geocoder()
@@ -385,9 +380,9 @@
 			mapTypeControl:true,
             streetViewControl: false
   		};
+  		marker=null;
 
   		map = new google.maps.Map(document.getElementById("map-container"),mapProp);
-
   		google.maps.event.addListener(map, 'click', function(event) {
     		placeMarker(event.latLng);
   		});
@@ -403,8 +398,6 @@
 	}
 
 	function showPosition(position) {
-//  	document.getElementById("lat").innerHTML = "Latitude: " + position.coords.latitude;
-//		document.getElementById("lng").innerHTML = "Longitude: " + position.coords.longitude;
     	var latlng={lat: parseFloat(position.coords.latitude), lng: parseFloat(position.coords.longitude)};
     	placeMarker(latlng);
 	}
@@ -413,9 +406,9 @@
 	function placeMarker(location) {
 	    if(marker){
 	        infowindow.close();
-	        marker.setPosition(location)
+	        marker.setPosition(location);
 	        geocoder.geocode({'location': location}, function(results, status){
-	            infowindow.setContent(results[1].formatted_address);
+	            infowindow.setContent(results[0].formatted_address);
 	            infowindow.open(map,marker);
 	        })
 	    }
@@ -425,22 +418,19 @@
 	        map: map,
 	        });
 	        geocoder.geocode({'location': location}, function(results, status){
-	            infowindow = new google.maps.InfoWindow({content: results[1].formatted_address});
+	            infowindow = new google.maps.InfoWindow({content: results[0].formatted_address});
 	            infowindow.open(map,marker);
 	        })
 	       	map.setZoom(6);
 	    }
 		map.setCenter(marker.getPosition());
-//	    document.getElementById("lat").innerHTML = "Latitude: " + location.lat();
-//	    document.getElementById("lng").innerHTML = "Longitude: " + location.lng();
 	}
-
 	google.maps.event.addDomListener(window, 'load', initialize);
 
-    //start of modal google map
-    $('#location-map-modal').on('shown.bs.modal', function () {
-    	google.maps.event.trigger(map, "resize");
-        map.setCenter(myCenter);
+</script>
+<script type='text/javascript'>
+ 	$('#location-map-modal').on('shown.bs.modal', function(e) {
+        initialize();
     });
 
 </script>
