--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -90,35 +90,42 @@
                         <!-- list all needs -->
                         <div class="row">
                             <div class="col-sm-12">
-                        <a class="list-group-item" id="standard-list-group-item-div">
-                            <div class="row">
-                                <div class="col-sm-12" data-toggle="modal" data-target=".{{ need.id }}">
-                                    <h4 class="list-group-item-heading">{{ need.headline }}</h4>
-                                    <p class="list-group-item-text">{{ need|get_short_text:160 }}</p>
-                                </div>
-                                <div class="col-sm-9" data-toggle="modal" data-target=".{{ need.id }}">
-                                    <h6><br>priority: {{ need.priority }} / pk: {{ need.pk }} / from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</h6>
-                                </div>
-                            </div>
-                        </a>
-
-                        <div class="list-group-footer" style="margin-bottom: 15px;">
-                                <div class="row">
-                                    <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
-                                        <div class="col-sm-6" id="list-group-footer-button-margin">
-                                            <span class="glyphicon glyphicon-comment"></span> Help
+                                <a class="list-group-item" id="standard-list-group-item-div">
+                                    <div class="row">
+                                        <div class="col-sm-12" data-toggle="modal" data-target=".{{ need.id }}">
+                                            <h4 class="list-group-item-heading">{{ need.headline }}</h4>
+                                            <p class="list-group-item-text">{{ need|get_short_text:160 }}</p>
                                         </div>
-                                    </a>
-                                    {% if not user.userdata in need.reported_by.all %}
-                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}"" onclick="report({{need.pk}})"">
-                                        <div class="col-sm-6">
-                                            <span class="glyphicon glyphicon-ban-circle"></span>Report
+                                        <div class="col-sm-9" data-toggle="modal" data-target=".{{ need.id }}">
+                                            <h6><br>priority: {{ need.priority }} / pk: {{ need.pk }} / from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</h6>
                                         </div>
-                                    </a>
-                                    {% endif %}
-                                </div>
+                                    </div>
+                                </a>
 
-                        </div>
+                                <div class="list-group-footer" style="margin-bottom: 15px;">
+                                     {% if not user.userdata in need.reported_by.all %}
+                                        <div class="row">
+                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
+                                                <div class="col-sm-6" id="list-group-footer-button-margin">
+                                                    <span class="glyphicon glyphicon-comment"></span> Help
+                                                </div>
+                                            </a>
+                                             <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}"" onclick="report({{need.pk}})"">
+                                                <div class="col-sm-6">
+                                                     <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                                </div>
+                                            </a>
+                                        </div>
+                                     {% else %}
+                                         <div class="row">
+                                             <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
+                                                 <div class="col-sm-12">
+                                                     <span class="glyphicon glyphicon-comment"></span> Help
+                                                 </div>
+                                             </a>
+                                         </div>
+                                     {% endif %}
+                                </div>
 
                             </div>
                         </div>
@@ -140,7 +147,7 @@
                                     <div class="modal-footer">
                                         <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
                                         {% if not user.userdata in need.reported_by.all %}
-                                          <button  type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})"" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
+                                          <button  type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
                                         {% endif %}
                                         <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
                                     </div>
