--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-sm-9">
                     <h2>{{information.headline}}</h2>
-                    <h6>from: {{ information.date }} {% if information.group %} / by: <a id="green-link" href="{% url 'basics:group_detail_for_user' name=information.group.name %}">{{ information.group.name }}</a>{% endif %}</h6>
+                    <h6>from: {{ information.date }}{% if information.author_is_admin %} / by: <span style="color: #D36E5A;">Admin</span>{% elif information.group %} / by: <a id="green-link" href="{% url 'basics:group_detail_for_user' name=information.group.name %}">{{ information.group.name }}</a>{% elif information.author == user %} / by: <span>you</span>{% endif %}</h6>
                 </div>
                 <div class="col-sm-3">
                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right">
