--- a/basics/static/basics/css/standard_components.css
+++ b/basics/static/basics/css/standard_components.css
@@ -254,4 +254,7 @@
 #cursor-pointer {
     cursor: pointer;
 }
+.cursor-pointer {
+    cursor: pointer;
+}
 /* ----------- end coursor pointer  ----------- */
